--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,49 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.swal2-container {
+	z-index: 999999999999999 !important;
+}
+.swal2-toast,
+.swal2-title,
+.swal2-html-container {
+	margin: 0.5em !important;
+}
+
+.swal2-toast {
+	padding: 1em 0.5em 1em 1em;
+}
+
+.colored-toast.swal2-icon-success {
+	background-color: #006400 !important;
+}
+
+.colored-toast.swal2-icon-error {
+	background-color: #800000 !important;
+}
+
+.colored-toast.swal2-icon-warning {
+	background-color: #daa520 !important;
+}
+
+.colored-toast.swal2-icon-info {
+	background-color: #3eaafc !important;
+}
+
+.colored-toast.swal2-icon-question {
+	background-color: #65839a !important;
+}
+
+.colored-toast .swal2-title {
+	color: white;
+}
+
+.colored-toast .swal2-close {
+	color: white;
+}
+
+.colored-toast .swal2-html-container {
+	color: white;
 }
